# tli-tracker-Rust

./: .gitignore  Cargo.toml  README.md  install_cachyos.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml
appimage/: tli-tracker.desktop
docs/: INSTALL_CACHYOS.md  screenshots.md
scripts/: build-appimage.sh
src/: gui.rs  items.json  log_parser.rs  main.rs  models.rs  storage.rs  web.rs
