[package]
name = "tli-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
